--- a/ga_sandbox/autom4te.cache/traces.2
+++ b/ga_sandbox/autom4te.cache/traces.2
@@ -196,7 +196,7 @@ m4trace:configure.ac:8: -1- AC_SUBST([AQSIS_FLTK_CFLAGS])
 m4trace:configure.ac:8: -1- AC_SUBST([AQSIS_FLTK_LIBS])
 m4trace:configure.ac:8: -1- AC_SUBST([AQSIS_FLTK_GL_CFLAGS])
 m4trace:configure.ac:8: -1- AC_SUBST([AQSIS_FLTK_GL_LIBS])
-m4trace:configure.ac:89: -1- AC_CONFIG_FILES([Makefile \
+m4trace:configure.ac:103: -1- AC_CONFIG_FILES([Makefile \
 	vs.net/Makefile \
 	\
 	libgasandbox/Makefile \
@@ -253,6 +253,18 @@ m4trace:configure.ac:89: -1- AC_CONFIG_FILES([Makefile \
 	\
 	chap12/Makefile \
 	\
+	chap13/Makefile \
+	chap13/ex1/Makefile \
+	chap13/ex2/Makefile \
+	chap13/ex3/Makefile \
+	chap13/ex4/Makefile \
+	\
+	chap14/Makefile \
+	\
+	chap15/Makefile \
+	\
+	chap16/Makefile \
+	\
 	solutions/Makefile \
 	\
 	solutions/chap2/Makefile \
@@ -274,9 +286,11 @@ m4trace:configure.ac:89: -1- AC_CONFIG_FILES([Makefile \
 	solutions/vs.net/Makefile \
 	\
 	attic/Makefile\
-	attic/gaigen2hp/Makefile
+	attic/gaigen2hp/Makefile \
+	\
+	screenshots/Makefile
 	])
-m4trace:configure.ac:89: -1- _m4_warn([obsolete], [AC_OUTPUT should be used without arguments.
+m4trace:configure.ac:103: -1- _m4_warn([obsolete], [AC_OUTPUT should be used without arguments.
 You should run autoupdate.], [])
-m4trace:configure.ac:89: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
-m4trace:configure.ac:89: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
+m4trace:configure.ac:103: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
+m4trace:configure.ac:103: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
