--- a/ga_sandbox/autom4te.cache/traces.2
+++ b/ga_sandbox/autom4te.cache/traces.2
@@ -196,7 +196,7 @@ m4trace:configure.ac:8: -1- AC_SUBST([AQSIS_FLTK_CFLAGS])
 m4trace:configure.ac:8: -1- AC_SUBST([AQSIS_FLTK_LIBS])
 m4trace:configure.ac:8: -1- AC_SUBST([AQSIS_FLTK_GL_CFLAGS])
 m4trace:configure.ac:8: -1- AC_SUBST([AQSIS_FLTK_GL_LIBS])
-m4trace:configure.ac:123: -1- AC_CONFIG_FILES([Makefile \
+m4trace:configure.ac:126: -1- AC_CONFIG_FILES([Makefile \
 	vs.net/Makefile \
 	\
 	qhull-2003.1/Makefile \
@@ -300,6 +300,9 @@ m4trace:configure.ac:123: -1- AC_CONFIG_FILES([Makefile \
 	solutions/chap11/Makefile \
 	solutions/chap11/ex4/Makefile \
 	\
+	solutions/chap13/Makefile \
+	solutions/chap13/ex2/Makefile \
+	\
 	solutions/chap14/Makefile \
 	solutions/chap14/ex2/Makefile \
 	\
@@ -310,7 +313,7 @@ m4trace:configure.ac:123: -1- AC_CONFIG_FILES([Makefile \
 	\
 	screenshots/Makefile
 	])
-m4trace:configure.ac:123: -1- _m4_warn([obsolete], [AC_OUTPUT should be used without arguments.
+m4trace:configure.ac:126: -1- _m4_warn([obsolete], [AC_OUTPUT should be used without arguments.
 You should run autoupdate.], [])
-m4trace:configure.ac:123: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
-m4trace:configure.ac:123: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
+m4trace:configure.ac:126: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
+m4trace:configure.ac:126: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
