--- a/ga_sandbox/autom4te.cache/traces.1
+++ b/ga_sandbox/autom4te.cache/traces.1
@@ -351,6 +351,7 @@ m4trace:configure.ac:14: -1- m4_pattern_allow([^ANTLR_LIBS$])
 m4trace:configure.ac:16: -1- AC_CONFIG_FILES([Makefile \
 	vs.net/Makefile \
 	vs2005/Makefile \
+	vs2008/Makefile \
 	\
 	qhull-2003.1/Makefile \
 	qhull-2003.1/src/Makefile \
@@ -464,6 +465,7 @@ m4trace:configure.ac:16: -1- AC_CONFIG_FILES([Makefile \
 	\
 	solutions/vs.net/Makefile \
 	solutions/vs2005/Makefile \
+	solutions/vs2008/Makefile \
 	\
 	attic/Makefile\
 	attic/gaigen2hp/Makefile \
