--- a/ga_sandbox/ChangeLog
+++ b/ga_sandbox/ChangeLog
@@ -1,3 +1,6 @@
+20081210 Added chapter folders to VS2005 solution
+20081210 Changed 'e2' to 'n' in chap1ex1 to match changes in second printing
+
 20080812 Added Visual Studio 2008 project files
 20080811 Recreated all Visual Studio 2005 project files, in preparation for VS2008 project files
 
